--- a/ListPage.xaml
+++ b/ListPage.xaml
@@ -3,31 +3,36 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Bunea_Denisa_Laborator7.ListPage"
              Title="ListPage">
-
-    <StackLayout Margin="20">
-        <Editor Placeholder="Enter the description of the shopping list"
+    <ContentPage.Content xmlns:local="clr-namespace:Bunea_Denisa_Laborator7">
+        <StackLayout Margin="20">
+            <Editor Placeholder="Enter the description of the shopping list"
                Text="{Binding Description}"
-               HeightRequest="50" />
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <Button Text="Save"
+               HeightRequest="50" >
+                <Editor.Behaviors>
+                <local:ValidationBehaviour />
+            </Editor.Behaviors>
+            </Editor>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <Button Text="Save"
                  Clicked="OnSaveButtonClicked" />
-            <Button Grid.Column="1"
+                <Button Grid.Column="1"
                  Text="Delete"
                  Clicked="OnDeleteButtonClicked"/>
-        </Grid>
-        <ListView x:Name="listView"
+            </Grid>
+            <ListView x:Name="listView"
               Margin="20">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <TextCell Detail="{Binding Description}" />
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-        <Button Text="Add/Choose Item to buy" MaximumWidthRequest="300"
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <TextCell Detail="{Binding Description}" />
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+            <Button Text="Add/Choose Item to buy" MaximumWidthRequest="300"
                Clicked="OnChooseButtonClicked"/>
-    </StackLayout>
+        </StackLayout>
+    </ContentPage.Content>
 </ContentPage>
